<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_no_actionbar"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="0dp"
        android:paddingRight="10dp" >

            <ImageView
                android:id="@+id/iv_register_user_image"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="5dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/user_image_description"
                android:maxHeight="128dip"
                android:maxWidth="128dip"
                android:src="@drawable/no_photo_large" />

            <EditText
                android:id="@+id/et_register_username"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/iv_register_user_image"
                android:background="@drawable/edit_back"
                android:hint="@string/username"
                android:paddingLeft="4dp" />

           <ImageButton
               android:id="@+id/btn_register_camera"
               android:layout_width="64dp"
               android:layout_height="64dp"
               android:layout_below="@+id/et_register_username"
               android:layout_marginTop="20dp"
               android:layout_toRightOf="@+id/iv_register_user_image"
               android:background="#00000000"
               android:src="@+drawable/camera" />

            <ImageButton
                android:id="@+id/btn_register_gallery"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_below="@+id/et_register_username"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@+id/btn_register_camera"
                android:background="#00000000"
                android:src="@+drawable/gallery" />

    </RelativeLayout>
    <!-- Button 
        android:id="@+id/btn_register_ok"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/register"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/-->

    <EditText
        android:id="@+id/et_register_email"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_back"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="4dp" />

    <EditText
        android:id="@+id/et_register_password"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_back"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="4dp" />

    <EditText
        android:id="@+id/et_register_password_confirm"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_back"
        android:hint="@string/password_confirm"
        android:inputType="textPassword"
        android:paddingLeft="4dp" />

</LinearLayout>